kubernetes-course-on-youtube/node-web-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  # namespace: kubernetes-dashboard
spec:
  # defaultBackend:
  #   service:
  #     name: node-web-server
  #     port:
  #       number: 3000
  rules:
  - host: mongo-express.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-web-server
            port:
              number: 3000
